--- a/floral_page/css/floral.css
+++ b/floral_page/css/floral.css
@@ -324,7 +324,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    box-shadow: ;
+    box-shadow: 5px 5px 10px;
 }
 .swiper.mySwiper{
     padding-top: 134px;
@@ -1354,6 +1354,7 @@
     }
     .container-heading-flower-arr{
         width: 70%;
+        padding: 0 50px;
     } 
     .col-left .decor-leaf-flower{
         padding-top: 20px;
@@ -1496,7 +1497,7 @@
     }
     .your-company{
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         padding: unset;
     }
     .follow-us{
