--- a/ngantt-italian-food/assets/css/index.css
+++ b/ngantt-italian-food/assets/css/index.css
@@ -2,18 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Montserrat:wght@300;400;600;700&display=swap');
 @font-face {
   font-family: 'Gabelisa';
-  src: url('Gabelisa.eot');
-  src: url('Gabelisa.eot?#iefix') format('embedded-opentype'),
-      url('Gabelisa.woff2') format('woff2'),
-      url('Gabelisa.woff') format('woff'),
-      url('Gabelisa.ttf') format('truetype'),
-      url('Gabelisa.svg#Gabelisa') format('svg');
+  src: url('../font/Gabelisa.eot');
+  src: url('../font/Gabelisa.eot') format('embedded-opentype'),
+      url('../font/Gabelisa.woff2') format('woff2'),
+      url('../font/Gabelisa.woff') format('woff'),
+      url('../font/Gabelisa.ttf') format('truetype'),
+      url('../font/Gabelisa.svg') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
-
-
 /* End adding font */
 
 /* start reseting css */
@@ -21,6 +19,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.5em;
 }
 a {
   text-decoration: none;
@@ -58,20 +58,42 @@ p {
   font-size: 1em;
 }
 
+.logo {
+  width: 251px;
+  height: 63px;
+}
+
+.subtitle {
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.container {
+  width: 100%;
+  display: block;
+}
+
+.row {
+  width: 1440px;
+  display: flex;
+  margin: auto;
+}
+#header-banner {
+  background-image: url(../img/banner.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+}
 header {
   padding: 40px;
   width: 1440px;
   margin: auto;
+
 }
 .intro {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-}
-
-.intro__logo {
-  width: 251px;
-  height: 63px;
 }
 
 .intro__start {
@@ -99,17 +121,21 @@ header {
   font-weight: 700;
 }
 
+.intro__start-contact-phone a {
+  color: black;
+}
+
 .intro__start-icon {
   width: 29px;
   height: 53px;
-  margin-bottom: 5px;
+  margin-bottom: 11px;
 }
 
 .intro__btn {
   display: none;
 }
 
-#nav__click {
+#click {
   display: none;
 }
 
@@ -143,22 +169,9 @@ header {
   display: none;
 }
 
-#header-banner {
-  background-image: url(../img/banner.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: right;
-  padding-top: 200px;
-  margin-top: -280px;
-  z-index:-1;
-}
-
 .banner {
   display: flex;
   justify-content: space-between;
-  padding: 40px;
-  width: 1440px;
-  margin: auto;
 }
 
 .banner__content {
@@ -236,8 +249,7 @@ header {
 .banner__img-pasta {
   position: absolute;
   padding-left: 30px;
-  width: 110px;
-  height: auto;
+  width: 6%;
 }
 
 .banner__img-tomato {
@@ -251,7 +263,9 @@ header {
   top:0;
   right:0px;
   width: 567px;
-  width: 79%;
+  width: 78%;
+  -webkit-filter: drop-shadow(5px 5px 35px rgb(0, 0, 0, 0.5));
+  filter: drop-shadow(5px 5px 35px rgb(0, 0, 0, 0.5));
 }
 
 .banner__img-leaf {
@@ -261,12 +275,297 @@ header {
   width: 10%;
 }
 
+.img-decor {
+  width: 240px;
+  height: auto;
+  margin-top: -255px;
+}
+
+.menu-info {
+  width: 1440px;
+  margin: auto;
+  margin-top: -130px;
+  text-align: center;
+  padding-bottom: 260px;
+}
+
+.menu-info__des {
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-top: 15px;
+}
+
+.row-meals {
+  display:flex;
+  width: 100%;
+  margin-top: 0px;
+  text-align: center;
+}
+.meals {
+  width: 100%;
+}
+.meals__item {
+  width: 100%;
+  text-align: center;
+}
+
+.meals__item-hr {
+  padding: 70px 0;
+  background-color: #e8e6a9;
+  border:none;
+}
+.meals__item-img {
+  width: 80%;
+  height: auto;
+  margin-top: calc(-40% - 70px);
+  filter: drop-shadow(35px 35px 35px rgb(0, 0, 0, 0.4));
+}
+
+.meals__text {
+  text-align: center;
+  width: 65%;
+  margin: auto;
+  margin-top:-30px;
+}
+
+.meals__text-des {
+  padding-top:15px;
+  padding-bottom: 30px;
+}
+
+.meals__text-btn {
+  font-size: 1em;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 15px 30px;
+  background-color: #ffe001;
+  border: none;
+  z-index: 100;
+  cursor: pointer;
+}
+
+#event {
+  padding-top: 100px;
+  width: 1440px;
+  margin: auto;
+  text-align: center;
+}
+
+#popular-meals {
+  width: 1240px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.popular-meals-1 {
+  display: grid;
+}
+
+.popular-meals-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.popular-meals__item {
+  width: 49%;
+}
+
+.popular-meals__item-img {
+  width: 100%;
+}
+
+.popular-meals__item-des {
+  position: absolute;
+  padding: 30px;
+  font-size: 1.25em;
+  font-weight: 600;
+  color: white;
+  text-transform: uppercase;
+  line-height: 130%;
+}
+
+.popular-meals-grid {
+  display: grid;
+}
+
+.popular-meals__item-des-span {
+  font-weight: 700;
+  font-size: 2em;
+  text-transform: uppercase;
+  line-height: 100%;
+}
+
+.contact {
+  width: 1440px;
+  margin: auto;
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.contact-heading {
+  margin: 50px 0 30px 0;
+}
+
+.contact-form {
+  display: table;
+  width: 800px;
+  margin: auto;
+  text-align: center;
+}
+.form__input {
+  padding: 22px;
+  border: 1px solid #cacaca;
+  border-radius: 5px;
+  font-size: 1em;
+  font-family: "Montserrat", serif;
+  width: 45%;
+  margin: 14px;
+}
+
+.form__submit {
+  padding: 22px;
+  border-radius: 5px;
+  font-size: 1.25em;
+  font-family: "Montserrat", serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-color: #ffe001;
+  width: 45%;
+  margin: 14px;
+  border: none;
+  cursor: pointer;
+}
+
+#click {
+  display: none;
+}
+
+.menu__img {
+  width: 100%;
+  margin-top: 40px;
+  margin-bottom: 80px;
+}
+
+.menu__img-slider {
+  display: flex;
+  align-items: center;
+}
+
+.menu__img-slider-item {
+  align-items: center;
+}
+
+.menu__img-slider-item-img {
+  filter: saturate(0.2);
+  display: block;
+  max-width:1000px;
+  max-height:666px;
+  width: auto;
+  height: auto;
+}
+
+.slick-slide img {
+  max-width: 100%;
+  transition: transform 0.5s;
+}
+
+.slick-slide.slick-center img {
+  filter: saturate(100%);
+  transform: scale(1.4);
+  z-index: 90;
+  position: relative;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 70px);
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
+
+.slick-dots button {
+  font-size: 0;
+  width: 15px;
+  height: 15px;
+  border-radius: 50px;
+  margin: 0 7px;
+  border: 0.1px solid rgb(190, 190, 190);
+  outline: none;
+  background-color: #ededed;
+}
+
+.slick-dots .slick-active button {
+  background-color: #f7d901;
+}
+
+.slick-active { 
+  padding: 60px 0; 
+}
+
+.slick-slide:not(.slick-active) { 
+  margin: 60px 0; 
+}
+
+.child { 
+  width:100%; 
+}
+
+.slide:not(.slick-active) { 
+  cursor: pointer; 
+}
+
+footer {
+  background-image: url(../img/background-footer.png);
+  background-repeat: none;
+  background-size: cover;
+  background-position: right;
+  color: white;
+  padding: 70px 0;
+}
+
+footer .row {
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.footer {
+  padding-bottom: 150px;
+}
+
+.footer-intro {
+  width: 55%;
+}
+
+.footer-contact__item {
+  display: flex;
+  align-items: center;
+}
+
+.footer-intro__item .logo {
+  margin-bottom: 30px;
+}
+
+.footer-contact__item i {
+  margin-right: 10px;
+  color: #ffe001;
+}
+
+.footer-social img {
+  margin-left: 10px;
+}
+/* Responsive laptop */
 @media (min-width: 1024px) and (max-width: 1440px) {
   header {
     width: 100%;
   }
 
-  .banner {
+  footer {
     width: 100%;
   }
 
@@ -294,228 +593,501 @@ header {
     width: 78%;
   }
 
+  .img-decor {
+    width: 200px;
+    height:auto;
+    margin-top: -200px;
+  }
+
+  .menu-info {
+    width:100%;
+    text-align: center;
+    margin-top: -150px;
+    position: relative;
+    z-index: 100;
+  }
+
+  .row-meals {
+    margin-top: -130px;
+  }
+
+  #event {
+    width: 100%;
+  }
+
+  #popular-meals {
+    width: 90%;
+    margin: auto;
+  }
+
+  .popular-meals__item-des {
+    position: absolute;
+    font-size: 1.1em;
+    padding: 20px;
+  }
+
+  .popular-meals__item-des-span {
+    font-size: 1.5em;
+    line-height: 90%;
+  }
+
+  .contact {
+    width: 100%;
+    padding: 30px;
+  }
+
+  .row {
+    width: 100%;
+    padding: 50px;
+  }
+
+  .footer-intro {
+    width: 55%;
+  }
 
 }
+/* End responsive laptop */
 
+/* Start responsive Tablet */
 @media (min-width: 740px) and (max-width: 1024px) {
-header {
-  width: 100%;
-  padding: 20px 10px;
-  padding-bottom: 50px;
-}
-#header-banner {
-  width: 100%;
-  padding-top: 200px;
-  margin-top: -280px;
-  z-index:-1;
-}
-.banner {
-  width: 100%;
-  align-items: center;
-}
-.banner__content-subtitle-img {
-  width: 30px;
-  height: auto;
-}
+  header {
+    width: 100%;
+    padding: 20px 10px;
+    padding-bottom: 50px;
+  }
 
-.banner__content-subtitle-text {
-  font-size: 3em;
-  z-index: 5;
+  footer {
+    width: 100%;
+  }
+
+  .banner__content-subtitle-img {
+    width: 30px;
+    height: auto;
+  }
+
+  .banner__content-subtitle-text {
+    font-size: 3em;
+    z-index: 5;
+
+  }
+
+  .banner__content-title {
+    font-size: 3.5em;
+    padding: 10px 0;
+  }
+
+  .banner__content-des {
+    font-size: 1.1em;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+
+  .banner__content-discount {
+    padding-bottom: 20px;
+  }
+
+  .banner__img-pasta {
+    width: 8%;
+    padding-left: 10px;
+    z-index: 1;
+  }
+
+  .banner__img-dish {
+    width: 77%;
+  }
+
+  .img-decor {
+    width: 150px;
+    height: auto;
+    margin-top: -150px;
+  }
+
+  .menu-info {
+    width: 100%;
+    text-align: center;
+    margin-top: -140px;
+    z-index: 99;
+  }
+
+  .row-meals {
+    margin-top: -150px;
+  }
+
+  .meals__item-hr {
+    padding: 50px 0;
+  }
+
+  .meals__item-img {
+    width: 90%;
+    margin-top: calc(-45% - 50px);
+  }
+
+  .meals__text {
+    width: 90%;
+    margin-top: 0px;
+  }
+  #event {
+    width: 100%;
+  }
+
+  .slick-slide.slick-center img {
+    transform: scale(1.8);
+  }
+
+  #popular-meals {
+    display: block;
+    width: 80%;
+    margin: auto;
+  }
+
+  .popular-meals__item {
+    width: 100%;
+  }
+
+  .popular-meals-grid {
+    margin-top: 20px;
+  }
+
+  .contact {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .contact-form {
+    width: 100%;
+  }
+
+  footer {
+    padding: 50px 30px;
+  }
+
+  .row {
+    width: 100%;
+    display: block;
+  }
+
+  .footer {
+    padding-bottom: 40px;
+  }
+
+  .footer-intro {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .footer-intro__item .logo {
+    margin-bottom: 10px;
+  }
+
+  .footer-contact {
+    width: 100%;
+  }
+
+  .footer-social img {
+    margin-left: 0px;
+    margin-right: 10px;
+  }
 
 }
+/* End responsive tablet */
 
-.banner__content-title {
-  font-size: 3.5em;
-  padding: 10px 0;
-}
-
-.banner__content-des {
-  font-size: 1.1em;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}
-
-.banner__content-discount {
-  padding-bottom: 20px;
-}
-
-.banner__img-pasta {
-  width: 8%;
-  padding-left: 10px;
-  z-index: 1;
-}
-
-.banner__img-dish {
-  width: 77%;
-}
-
-}
-
+/* Start responsive mobile */
 @media (max-width: 740px) {
+  html {
+    width:inherit;
+  }
 
-html {
-  width:inherit;
-}
+  h2 {
+    font-size: 1.8em;
+  }
 
-header {
-  width: 100%;
-  padding: 0.8em;
-}
+  header {
+    width: 100%;
+    padding: 10px 10px 80px 10px;
+  }
 
-.intro__logo {
-  width: 150px;
-  height:fit-content;
-  margin-bottom: 5px;
-}
+  .logo {
+    width: 150px;
+    height:fit-content;
+  }
 
-.intro__start {
-  display: none;
-}
+  .intro__logo {
+    margin-bottom: 5px;
+  }
 
-.intro__btn {
-  display: block;
-  text-align: end;
-  margin-top: -60px;
-  font-size: 25px;
-}
+  .intro__start {
+    display: none;
+  }
 
-.fa-bars {
-  cursor: pointer;
-  display: block;
-}
-#nav__click:checked ~ .intro__btn i:before {
-  content: "\f00d";
-}
+  .intro__btn {
+    display: block;
+    text-align: end;
+    margin-top: -70px;
+    font-size: 25px;
+  }
 
-.nav {
-  padding-bottom: 0;
-}
+  .fa-bars {
+    cursor: pointer;
+    display: block;
+  }
 
-nav ul {
-  padding-top: 0;
-  position: fixed;
-  top: 60px;
-  left: -100%;
-  background: rgba(0, 0, 0, 0.7);
-  height: 100vh;
-  width: 100%;
-  display: block;
-  color:white;
-  transition: all 0.5s ease;
-  z-index:20;
-}
+  #click:checked ~ .intro__btn i:before {
+    content: "\f00d";
+  }
 
-#nav__click:checked ~ ul {
-  left: 0;
-}
-.nav__bar-item {
-  font-size: 1.5em;
-  display: block;
-  text-align: center;
-  padding: 15px;
-  border-bottom:1px solid rgba(155, 155, 155, 0.3);
-}
+  .nav {
+    padding-bottom: 0;
+  }
 
-.nav__bar-item:hover {
-  background-color: #fff;
+  nav ul {
+    padding-top: 0;
+    position: fixed;
+    top: 60px;
+    left: -100%;
+    background: #333;
+    height: 100vh;
+    width: 100%;
+    display: block;
+    color:white;
+    transition: all 0.5s ease;
+    z-index:20;
+  }
+
+  #click:checked ~ ul {
+    left: 0;
+  }
+
+  .nav__bar-item {
+    font-size: 1.5em;
+    display: block;
+    text-align: center;
+    padding: 15px;
+    border-bottom:1px solid rgba(155, 155, 155, 0.3);
+  }
+
+  .nav__bar-item:hover {
+    background-color: #fff;
+  }
+
+  .nav__bar-item + .nav__bar-item {
+    padding-left: 0px;
+  }
+
+  .nav__bar-item-link {
+    color:white;
+  }
+
+  .nav__bar-item:hover .nav__bar-item-link {
+    color: #000;
+  }
+
+  .nav__bar-intro {
+    display: block;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .nav__bar-intro-contact {
+    display: inline-block;
+  }
+  
+  .nav__bar-intro-icon:before {
+    display: inline-block;
+    font-size: 60px;
+  }
+
+  .nav__bar-intro .intro__start-contact-phone a {
+    color: white;
+  }
+
+  .banner {
+    display: block;
+  }
+
+  .banner__content {
+    width: 100%;
+  }
+
+  .banner__content-subtitle {
+    margin-top: -50px;
+  }
+
+  .banner__content-subtitle-img {
+    width: 35px;
+    height: auto;
+    right: -5%;
+  }
+
+  .banner__content-subtitle-text {
+    font-size: 3em;
+    z-index: 10;
+  }
+
+  .banner__content-title {
+    font-size: 3em;
+    text-align: center;
+    width: 100%;
+    margin:0;
+  }
+
+  .banner__content-des {
+    font-size: 1.1em;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+
+  .banner__content-discount {
+    padding-bottom: 20px;
+  }
+
+  .banner__img {
+    margin-top: 10px;
+  }
+
+  .banner__img-pasta {
+    width: 15%;
+    padding-left: 5px;
+  }
+
+  .banner__img-tomato {
+    width: 12%;
+  }
+
+  .banner__img-dish {
+    width: 71%;
+  }
+
+  .banner__img-leaf {
+    width: 12%;
+  }
+
+  .img-decor {
+    width: 100px;
+    height: auto;
+    margin-top: -100px;
+  }
+
+  .menu-info {
+    width: 100%;
+    margin-top: -70px;
+    padding: 10px;
+  }
+  .menu-info__des {
+    padding: 0;
+  }
+  .row-meals {
+    display: block;
+    width: 100%;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  .meals {
+    margin-top: 110px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #e9e9e9;
+  }
+
+  .meals__item-hr {
+    padding: 70px 0;
+  }
+  .meals__item-img {
+    width: 300px;
+    margin-top: calc(-150px - 70px);
+  }
+
+  .meals__text {
+    width: 90%;
+    margin-top: -10px;
+  }
+
+  #event {
+    width: 100%;
+    padding-top: 30px;
+  }
+
+  .slick-slide.slick-center img {
+    transform: scale(3);
+  }
+
+  .slick-dots {
+    transform: translate(-50%, 90px);
+  }
+
+  #popular-meals {
+    display: block;
+    width: 95%;
+    margin: auto;
+  }
+
+  .popular-meals__item {
+    width: 100%;
+  }
+
+  .popular-meals-grid {
+    margin-top: 20px;
+  }
+
+  .popular-meals__item-des {
+    position: absolute;
+    font-size: 0.9em;
+    padding: 3px 10px 10px 10px;
+    line-height: 150%;
+  }
+
+  .popular-meals__item-des-span {
+    font-size: 1.3em;
+    line-height: 90%;
+  }
+
+  .contact {
+    width: 100%;
+    padding: 30px;
+  }
+
+  .contact-form {
+    display: table;
+    width: 100%;
+  }
+
+  .form__input,
+  .form__submit {
+    width: 100%;
+    margin: 15px 0;
+  }
+
+  footer {
+    padding: 30px 10px;
+  }
+
+  .row {
+    width: 100%;
+    display: block;
+  }
+
+  .footer {
+    padding-bottom: 40px;
+  }
+
+  .footer-intro {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .footer-intro__item .logo {
+    margin-bottom: 10px;
+  }
+
+  .footer-contact {
+    width: 100%;
+  }
+
+  .footer-social img {
+    margin-left: 0px;
+    margin-right: 10px;
+  }
+
 }
-
-.nav__bar-item + .nav__bar-item {
-  padding-left: 0px;
-}
-
-.nav__bar-item-link {
-  color:white;
-}
-.nav__bar-item:hover .nav__bar-item-link {
-  color: #000;
-}
-
-.nav__bar-intro {
-  display: block;
-  width: 100%;
-  margin: auto;
-  text-align: center;
-  padding: 20px;
-}
-
-.nav__bar-intro-contact {
-  display: inline-block;
-}
-
-.nav__bar-intro-icon:before {
-  display: inline-block;
-  font-size: 60px;
-}
-
-#header-banner {
-  padding-top: 100px;
-  margin-top: -160px;
-}
-
-.banner {
-  width: 100%;
-  display: block;
-}
-
-.banner__content {
-  width: 100%;
-}
-
-.banner__content-subtitle {
-  margin-top: -50px;
-}
-
-.banner__content-subtitle-img {
-  width: 35px;
-  height: auto;
-  right: -5%;
-}
-
-.banner__content-subtitle-text {
-  font-size: 3em;
-  z-index: 10;
-}
-
-.banner__content-title {
-  font-size: 3em;
-  text-align: center;
-  width: 100%;
-  margin:0;
-}
-
-.banner__content-des {
-  font-size: 1.1em;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}
-
-.banner__content-discount {
-  padding-bottom: 20px;
-}
-
-.banner__img {
-  margin-top: 10px;
-}
-
-.banner__img-pasta {
-  width: 15%;
-  padding-left: 5px;
-}
-
-.banner__img-tomato {
-  width: 12%;
-}
-
-.banner__img-dish {
-  width: 71%;
-}
-
-.banner__img-leaf {
-  width: 12%;
-}
-
-
-
-
-}
+/* End responsive mobile */
