--- a/ngantt-italian-food/assets/css/index.css
+++ b/ngantt-italian-food/assets/css/index.css
@@ -484,7 +484,7 @@ header {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 70px);
-  display: flex !important;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
